Aligned with main
Signed-off-by: Richard Johansson <richard.jimmy.johansson@gmail.com>

--- a/charts/argo-rollouts/templates/controller/role.yaml
+++ b/charts/argo-rollouts/templates/controller/role.yaml
@@ -208,6 +208,7 @@ rules:
   verbs:
   - list
   - get
+{{- end }}
 {{- if .Values.providerRBAC.providers.awsAppMesh }}
 # AppMesh virtualservices/virtualrouter CRD read-only access needed for using the App Mesh provider
 - apiGroups:
