--- a/charts/argo-rollouts/Chart.yaml
+++ b/charts/argo-rollouts/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 appVersion: v1.4.0
 description: A Helm chart for Argo Rollouts
 name: argo-rollouts
-version: 2.22.0
+version: 2.22.1
 home: https://github.com/argoproj/argo-helm
 icon: https://argoproj.github.io/argo-rollouts/assets/logo.png
 keywords:
@@ -15,4 +15,4 @@ maintainers:
     url: https://argoproj.github.io/
 annotations:
   artifacthub.io/changes: |
-    - "[Changed]: Upgrade ArgoRollouts to v1.4.0"
+    - "[Added]: Flags to toggle provider-specific RBAC rules in Role and ClusterRole"
