--- a/charts/argo-cd/templates/argocd-notifications/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-notifications/deployment.yaml
@@ -48,9 +48,9 @@ spec:
           imagePullPolicy: {{ default .Values.global.image.imagePullPolicy .Values.notifications.image.imagePullPolicy }}
           command:
             - argocd-notifications
+            - --metrics-port={{ .Values.notifications.containerPorts.metrics }}
             - --loglevel={{ default .Values.global.logging.level .Values.notifications.logLevel }}
             - --logformat={{ default .Values.global.logging.format .Values.notifications.logFormat }}
-            - --metrics-port={{ .Values.notifications.metrics.port }}
             - --namespace={{ .Release.Namespace }}
             - --argocd-repo-server={{ template "argo-cd.repoServer.fullname" . }}:{{ .Values.repoServer.service.port }}
             {{- range .Values.notifications.extraArgs }}
@@ -66,7 +66,7 @@ spec:
           {{- end }}
           ports:
           - name: metrics
-            containerPort: {{ .Values.notifications.metrics.port }}
+            containerPort: {{ .Values.notifications.containerPorts.metrics }}
             protocol: TCP
           resources:
             {{- toYaml .Values.notifications.resources | nindent 12 }}
