chore(argo-cd): Upgrade Redis exporter image
Signed-off-by: Petr Drastil <petr.drastil@gmail.com>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -1001,7 +1001,7 @@ redis:
       # -- redis-exporter image repository
       repository: public.ecr.aws/bitnami/redis-exporter
       # -- redis-exporter image tag
-      tag: 1.26.0-debian-10-r2
+      tag: 1.45.0
       # -- Image pull policy for the Redis exporter
       # @default -- `""` (defaults to global.image.imagePullPolicy)
       imagePullPolicy: ""
