--- a/charts/argo-events/values.yaml
+++ b/charts/argo-events/values.yaml
@@ -99,6 +99,10 @@ configs:
         configReloaderImage: natsio/nats-server-config-reloader:latest
         startCommand: /nats-server
 
+# -- Array of extra K8s manifests to deploy
+## Note: Supports use of custom Helm templates
+extraObjects: []
+
 ## Argo Events controller
 controller:
   # -- Argo Events controller name string
