feat(argo-events): Added support for extra k8s manifests (#1797)
* feat(argo-events): Added support for extra k8s manifests

Signed-off-by: Ole Markus Kristiansen Ternø <79976935+oterno@users.noreply.github.com>

* added value example for extraObjects

Signed-off-by: Ole Markus Kristiansen Ternø <79976935+oterno@users.noreply.github.com>

Signed-off-by: Ole Markus Kristiansen Ternø <79976935+oterno@users.noreply.github.com>

--- a/charts/argo-events/values.yaml
+++ b/charts/argo-events/values.yaml
@@ -99,6 +99,35 @@ configs:
         configReloaderImage: natsio/nats-server-config-reloader:latest
         startCommand: /nats-server
 
+# -- Array of extra K8s manifests to deploy
+## Note: Supports use of custom Helm templates
+extraObjects: []
+  # - apiVersion: secrets-store.csi.x-k8s.io/v1
+  #   kind: SecretProviderClass
+  #   metadata:
+  #     name: argo-events-secrets-store
+  #   spec:
+  #     provider: aws
+  #     parameters:
+  #       objects: |
+  #         - objectName: "argo-events"
+  #           objectType: "secretsmanager"
+  #           jmesPath:
+  #               - path: "client_id"
+  #                 objectAlias: "client_id"
+  #               - path: "client_secret"
+  #                 objectAlias: "client_secret"
+  #     secretObjects:
+  #     - data:
+  #       - key: client_id
+  #         objectName: client_id
+  #       - key: client_secret
+  #         objectName: client_secret
+  #       secretName: argo-events-secrets-store
+  #       type: Opaque
+  #       labels:
+  #         app.kubernetes.io/part-of: argocd
+
 ## Argo Events controller
 controller:
   # -- Argo Events controller name string
