chore(argo-events): Upgrade Argo Events to v1.7.5
[Diff between 1.7.4 and 1.7.5](https://github.com/argoproj/argo-events/compare/v1.7.4...v1.7.5)

Signed-off-by: jmeridth <jmeridth@gmail.com>

--- a/charts/argo-events/Chart.yaml
+++ b/charts/argo-events/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
-appVersion: v1.7.4
+appVersion: v1.7.5
 description: A Helm chart for Argo Events, the event-driven workflow automation framework
 name: argo-events
-version: 2.1.0
+version: 2.1.1
 home: https://github.com/argoproj/argo-helm
 icon: https://argoproj.github.io/argo-events/assets/logo.png
 keywords:
@@ -15,4 +15,4 @@ maintainers:
     url: https://argoproj.github.io/
 annotations:
   artifacthub.io/changes: |
-    - "[Added]: Additional manifests to deploy within the chart"
+    - "[Changed]: Update Argo Events to v1.7.5"
