--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -147,7 +147,7 @@ controller:
   #   serverKeySecret:
   #     name: argo-postgres-tls
   #     key: tls.key
-  # # default path to store postgres certificates if certPath is ot defined: /home/argo/pgcerts
+  # # default path to store postgres certificates if certPath is not defined: /home/argo/pgcerts
   #   certPath: ./certs 
  
   # -- Default values that will apply to all Workflows from this controller, unless overridden on the Workflow-level.
