added comment for root file system flag and updated the key names for tls certificates
Signed-off-by: Rajshekar Reddy <reddymh@gmail.com>

--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -115,7 +115,7 @@ controller:
     capabilities:
       drop:
         - ALL
-  # # readOnlyRootFilesystem should be false SSL when using postgres 
+  # # readOnlyRootFilesystem should be false when postgres SSL is enabled and sslmode is one of the require|verify-ca|verify-full value
   #  readOnlyRootFilesystem: false
   # -- enable persistence using postgres
   persistence: {}
