feat(argo-cd)!: refactor ingress to support any backend service
Signed-off-by: Jacek Domagalski <domagalski.j@gmail.com>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -1666,12 +1666,18 @@ server:
     hosts: []
       # - argocd.example.com
 
-    # -- List of ingress paths
     paths:
-      - /
-    # -- Ingress path type. One of `Exact`, `Prefix` or `ImplementationSpecific`
-    pathType: Prefix
-    # -- Additional ingress paths
+      - path: /
+        # -- Ingress path type. One of `Exact`, `Prefix` or `ImplementationSpecific`
+        pathType: Prefix
+        service:
+          # -- Backend service name
+          # @default -- argo-cd server service name 
+          name: ""
+          # -- Backend service port. Can be String or Int value. 
+          # @default -- argo-cd server service port 
+          port: ""
+
     extraPaths: []
       # - path: /*
       #   pathType: Prefix
