--- a/charts/argocd-apps/ci/applicationsets-values.yaml
+++ b/charts/argocd-apps/ci/applicationsets-values.yaml
@@ -1,7 +1,7 @@
 # Test with applicationsets
 
 applicationsets:
-- name: applicatioset
+- name: applicationset
   additionalLabels: {}
   additionalAnnotations: {}
   # See PR #10026 (ArgoCD v2.5 or later)
