feat(argo-cd): Add dnsConfig and dnsPolicy for pods (#1773)
feat(argo-cd): Add dnsConfig and dnsPolicy for pods (#1771)

Signed-off-by: Loris Torikian <loris_torikian@hotmail.fr>
Co-authored-by: Loris Torikian <loris.torikian@square-sense.com>
Co-authored-by: Marco Kilchhofer <mkilchhofer@users.noreply.github.com>

--- a/charts/argo-cd/templates/argocd-application-controller/statefulset.yaml
+++ b/charts/argo-cd/templates/argocd-application-controller/statefulset.yaml
@@ -313,4 +313,8 @@ spec:
       priorityClassName: {{ . }}
       {{- end }}
       hostNetwork: {{ .Values.controller.hostNetwork }}
+      {{- with .Values.controller.dnsConfig }}
+      dnsConfig:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       dnsPolicy: {{ .Values.controller.dnsPolicy }}
