fix(argocd-apps): Add revisionHistoryLimit option to apps

--- a/charts/argocd-apps/ci/applications-values.yaml
+++ b/charts/argocd-apps/ci/applications-values.yaml
@@ -20,6 +20,7 @@ applications:
     automated:
       prune: false
       selfHeal: false
+  revisionHistoryLimit: 5
   ignoreDifferences:
   - group: apps
     kind: Deployment
