chore(argo-rollouts): Add update information Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/charts/argo-rollouts/Chart.yaml
+++ b/charts/argo-rollouts/Chart.yaml
@@ -17,3 +17,5 @@ annotations:
   artifacthub.io/changes: |
     - kind: changed
       description: Upgrade Argo Rollouts to v.1.4.1
+    - kind: added
+      description: Put Changelog URL on README.md
