--- a/charts/argocd-apps/values.yaml
+++ b/charts/argocd-apps/values.yaml
@@ -30,7 +30,7 @@ applications: []
 #     automated:
 #       prune: false
 #       selfHeal: false
-#   revisionHistoryLimit: 5
+#   revisionHistoryLimit: null
 #   ignoreDifferences:
 #   - group: apps
 #     kind: Deployment
