fix(argo-cd): Update cw full-access role

--- a/charts/argo-cd/templates/argocd-application-controller/coreweave-role.yaml
+++ b/charts/argo-cd/templates/argocd-application-controller/coreweave-role.yaml
@@ -17,6 +17,7 @@ rules:
     - pods/portforward
     - pods/exec
     - pods/attach
+    - pods/status
     verbs:
       - "*"
   - apiGroups:
@@ -246,3 +247,13 @@ rules:
       - workloadspreads
     verbs:
       - '*'
+  - apiGroups:
+    - ""
+    resourceNames:
+    - {{ .Release.Namespace }}
+    resources:
+    - namespaces
+    verbs:
+    - get
+    - list
+    - watch
